@@ -307,6 +307,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #15596: Faster pickling of unicode strings.
+
 - Issue #17572: Avoid chained exceptions while passing bad directives to
   time.strptime().  Initial patch by Claudiu Popa.
 
